@@ -324,73 +324,11 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|core
-operator|.
-name|SolrCore
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
 name|handler
 operator|.
 name|component
 operator|.
 name|FacetComponent
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|handler
-operator|.
-name|component
-operator|.
-name|SpatialHeatmapFacets
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|handler
-operator|.
-name|component
-operator|.
-name|DateFacetProcessor
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|handler
-operator|.
-name|component
-operator|.
-name|RangeFacetProcessor
 import|;
 end_import
 
@@ -1202,9 +1140,7 @@ literal|null
 else|:
 operator|new
 name|ArrayList
-argument_list|<
-name|InterestingTerm
-argument_list|>
+argument_list|<>
 argument_list|(
 name|mlt
 operator|.
@@ -1790,27 +1726,15 @@ condition|)
 block|{
 for|for
 control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
+name|String
+name|dbgParam
+range|:
 name|dbgParams
-operator|.
-name|length
-condition|;
-name|i
-operator|++
 control|)
 block|{
 if|if
 condition|(
-name|dbgParams
-index|[
-name|i
-index|]
+name|dbgParam
 operator|.
 name|equals
 argument_list|(
@@ -1828,10 +1752,7 @@ block|}
 elseif|else
 if|if
 condition|(
-name|dbgParams
-index|[
-name|i
-index|]
+name|dbgParam
 operator|.
 name|equals
 argument_list|(
@@ -2689,11 +2610,44 @@ operator|.
 name|getQuery
 argument_list|()
 decl_stmt|;
-name|Float
-name|b
+name|float
+name|originalBoost
 init|=
-name|this
+literal|1f
+decl_stmt|;
+if|if
+condition|(
+name|q
+operator|instanceof
+name|BoostQuery
+condition|)
+block|{
+name|BoostQuery
+name|bq
+init|=
+operator|(
+name|BoostQuery
+operator|)
+name|q
+decl_stmt|;
+name|q
+operator|=
+name|bq
 operator|.
+name|getQuery
+argument_list|()
+expr_stmt|;
+name|originalBoost
+operator|=
+name|bq
+operator|.
+name|getBoost
+argument_list|()
+expr_stmt|;
+block|}
+name|Float
+name|fieldBoost
+init|=
 name|boostFields
 operator|.
 name|get
@@ -2712,24 +2666,31 @@ name|field
 argument_list|()
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|b
-operator|!=
-literal|null
-condition|)
-block|{
 name|q
 operator|=
+operator|(
+operator|(
+name|fieldBoost
+operator|!=
+literal|null
+operator|)
+condition|?
 operator|new
 name|BoostQuery
 argument_list|(
 name|q
 argument_list|,
-name|b
+name|fieldBoost
+operator|*
+name|originalBoost
 argument_list|)
+else|:
+name|clause
+operator|.
+name|getQuery
+argument_list|()
+operator|)
 expr_stmt|;
-block|}
 name|newQ
 operator|.
 name|add
@@ -3452,7 +3413,7 @@ literal|1f
 decl_stmt|;
 if|if
 condition|(
-name|query
+name|q
 operator|instanceof
 name|BoostQuery
 condition|)
