@@ -769,6 +769,7 @@ name|filteredDocument
 init|=
 operator|new
 name|HashMap
+argument_list|<>
 argument_list|()
 decl_stmt|;
 name|ArrayList
@@ -779,6 +780,7 @@ name|fieldNames
 init|=
 operator|new
 name|ArrayList
+argument_list|<>
 argument_list|()
 decl_stmt|;
 if|if
@@ -1060,8 +1062,43 @@ operator|.
 name|getQuery
 argument_list|()
 decl_stmt|;
+name|float
+name|originalBoost
+init|=
+literal|1f
+decl_stmt|;
+if|if
+condition|(
+name|q
+operator|instanceof
+name|BoostQuery
+condition|)
+block|{
+name|BoostQuery
+name|bq
+init|=
+operator|(
+name|BoostQuery
+operator|)
+name|q
+decl_stmt|;
+name|q
+operator|=
+name|bq
+operator|.
+name|getQuery
+argument_list|()
+expr_stmt|;
+name|originalBoost
+operator|=
+name|bq
+operator|.
+name|getBoost
+argument_list|()
+expr_stmt|;
+block|}
 name|Float
-name|b
+name|fieldBoost
 init|=
 name|boostFields
 operator|.
@@ -1081,24 +1118,31 @@ name|field
 argument_list|()
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|b
-operator|!=
-literal|null
-condition|)
-block|{
 name|q
 operator|=
+operator|(
+operator|(
+name|fieldBoost
+operator|!=
+literal|null
+operator|)
+condition|?
 operator|new
 name|BoostQuery
 argument_list|(
 name|q
 argument_list|,
-name|b
+name|fieldBoost
+operator|*
+name|originalBoost
 argument_list|)
+else|:
+name|clause
+operator|.
+name|getQuery
+argument_list|()
+operator|)
 expr_stmt|;
-block|}
 name|newQ
 operator|.
 name|add
