@@ -643,6 +643,43 @@ name|params
 operator|.
 name|set
 argument_list|(
+name|MoreLikeThisParams
+operator|.
+name|BOOST
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|mltreq
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|mltreq
+operator|=
+operator|new
+name|LocalSolrQueryRequest
+argument_list|(
+name|core
+argument_list|,
+name|params
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"morelikethis - tom cruise"
+argument_list|,
+name|mltreq
+argument_list|,
+literal|"//result/doc[1]/int[@name='id'][.='46']"
+argument_list|,
+literal|"//result/doc[2]/int[@name='id'][.='43']"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
 name|CommonParams
 operator|.
 name|Q
