@@ -878,6 +878,118 @@ name|CommonParams
 operator|.
 name|Q
 argument_list|,
+literal|"{!mlt qf=lowerfilt boost=true}17"
+argument_list|)
+expr_stmt|;
+name|queryResponse
+operator|=
+name|queryServer
+argument_list|(
+name|params
+argument_list|)
+expr_stmt|;
+name|solrDocuments
+operator|=
+name|queryResponse
+operator|.
+name|getResults
+argument_list|()
+expr_stmt|;
+name|expectedIds
+operator|=
+operator|new
+name|int
+index|[]
+block|{
+literal|7
+block|,
+literal|13
+block|,
+literal|14
+block|,
+literal|15
+block|,
+literal|16
+block|,
+literal|20
+block|,
+literal|22
+block|,
+literal|24
+block|,
+literal|32
+block|,
+literal|9
+block|}
+expr_stmt|;
+name|actualIds
+operator|=
+operator|new
+name|int
+index|[
+name|solrDocuments
+operator|.
+name|size
+argument_list|()
+index|]
+expr_stmt|;
+name|i
+operator|=
+literal|0
+expr_stmt|;
+for|for
+control|(
+name|SolrDocument
+name|solrDocument
+range|:
+name|solrDocuments
+control|)
+block|{
+name|actualIds
+index|[
+name|i
+operator|++
+index|]
+operator|=
+name|Integer
+operator|.
+name|valueOf
+argument_list|(
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|solrDocument
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|assertArrayEquals
+argument_list|(
+name|expectedIds
+argument_list|,
+name|actualIds
+argument_list|)
+expr_stmt|;
+name|params
+operator|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+name|CommonParams
+operator|.
+name|Q
+argument_list|,
 literal|"{!mlt qf=lowerfilt mindf=0 mintf=1}3"
 argument_list|)
 expr_stmt|;
