@@ -703,6 +703,51 @@ name|CommonParams
 operator|.
 name|Q
 argument_list|,
+literal|"{!mlt qf=lowerfilt boost=true}17"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+name|params
+argument_list|)
+argument_list|,
+literal|"//result/doc[1]/int[@name='id'][.='13']"
+argument_list|,
+literal|"//result/doc[2]/int[@name='id'][.='14']"
+argument_list|,
+literal|"//result/doc[3]/int[@name='id'][.='15']"
+argument_list|,
+literal|"//result/doc[4]/int[@name='id'][.='16']"
+argument_list|,
+literal|"//result/doc[5]/int[@name='id'][.='18']"
+argument_list|,
+literal|"//result/doc[6]/int[@name='id'][.='19']"
+argument_list|,
+literal|"//result/doc[7]/int[@name='id'][.='20']"
+argument_list|,
+literal|"//result/doc[8]/int[@name='id'][.='21']"
+argument_list|,
+literal|"//result/doc[9]/int[@name='id'][.='22']"
+argument_list|,
+literal|"//result/doc[10]/int[@name='id'][.='23']"
+argument_list|)
+expr_stmt|;
+name|params
+operator|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+name|CommonParams
+operator|.
+name|Q
+argument_list|,
 literal|"{!mlt qf=lowerfilt mindf=0 mintf=1}26"
 argument_list|)
 expr_stmt|;
